--- a/docs/lite-anarchy/Общие сведения/Краткое описание.md
+++ b/docs/lite-anarchy/Общие сведения/Краткое описание.md
@@ -4,6 +4,8 @@
 
 HolyWorld — это популярный проект серверов Minecraft, специализирующийся на анархическом игровом процессе. Среди различных режимов, предлагаемых проектом, Лайт Анархия выделяется как уникальный вариант, сочетающий свободу анархии с кастомными механиками, которые добавляют глубину и разнообразие в игровой процесс. Этот режим привлекает как новичков, так и опытных игроков благодаря своим уникальным особенностям и активному сообществу.
 
+![photo_2024-04-27_05-02-33](https://github.com/user-attachments/assets/744c77d3-3d0f-4db7-8cc7-5a6ce2402ab6)
+
 ## Общая информация о сервере
 
 | **Характеристика**        | **Описание**                                                           |
